--- a/client/src/App.css
+++ b/client/src/App.css
@@ -146,6 +146,7 @@ h1 {
 
 h2 {
   font-size: 1.8rem;
+  margin: 5px 0;
 }
 
 h4 {
@@ -154,20 +155,11 @@ h4 {
 
 p {
   font-size: 1.4rem;
-}
-
-img {
-  height: auto;
-  width: 100%;
-}
-
-.flex-spacer {
-  width: 100%;
+  margin: 5px 0;
 }
 
 .App {
   font-family: sans-serif;
-  text-align: center;
   width: 100%;
 }
 
@@ -217,7 +209,20 @@ img {
   border: none;
 }
 
-a {
-  text-decoration: none;
-  color: initial;
+.players {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.player {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  width: 20vw;
+  margin: 20px;
+}
+
+strong {
+  font-weight: 600;
 }
